--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- secciones de la pagina -->
     <div class="head">
         <nav class="navbar">  <!---->
-        <a href="#">Diferencias<br>con el resto</a>
+        <a href="www.google.com">Diferencias<br>con el resto</a>
         <a href="#">Servicios</a>
 
         <div class="logo">
