--- a/WIKIColabora/index.html
+++ b/WIKIColabora/index.html
@@ -28,6 +28,7 @@
                 <a href="servicios.html">servicios</a>
                 <a href="sobremi.html">sobre Mi</a>
                 <a href="contactos.html">contactos</a>
+                <a href="login.html">cerrar sesion</a>
             </nav>        
         </div>   
     </div>
@@ -85,27 +86,29 @@
         <!--header-->
         <div class="card-group">
             <div class="card">
-              <img src="/img/p1.jpg" class="card-img-top" alt="...">
+              <img src="/img/code.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Codigos</h5>
+                <p class="card-text">Los codigos de programacion son aquellos que estructuran el lenguaje de programacion,<br>
+                   que a su vez es el encargado de garantizar el correcto funcionamiento de las aplicaciones o programas 
+                   que permiten una buena comunicacion entre el usuario y la computadora.</p>
               </div>
             </div>
             <div class="card">
-              <img src="/img/ia.jpg" class="card-img-top" alt="...">
+              <img src="/img/bd2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Base de datos</h5>
+                <p class="card-text">Una base de datos es una recopilacion de datos sistematica y almacenada electronicamente. <br>
+                   Puede contener cualquier tipo de datos, incluidos palabras, numeros, imagenes, videos y archivos.
+                    Puede usar un software denominado sistema de administracion de bases de datos (DBMS) para almacenar, recuperar y editar datos.</p>
               </div>
             </div>
             <div class="card">
-              <img src="/img/ia.jpg" class="card-img-top" alt="...">
+              <img src="/img/ia2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">IA</h5>
+                <p class="card-text">La inteligencia artificial (IA) es un campo de la informatica que se enfoca en crear sistemas que puedan <br>
+                   realizar tareas que normalmente requieren inteligencia humana, como el aprendizaje, el razonamiento y la percepcion.</p>
               </div>
             </div>
           </div>
@@ -113,10 +116,10 @@
       <footer class="bg-secondary py-5 mt-5">
         
         <div class="container text-light text-center">
-            <p class="display-5 mb-3">ejemplo</p>
-            <small class="text-while-50">&copy; aiosydaisudghaouiegqwuegiqwekbqwe</small>
+            <p class="display-5 mb-3">¡Gracias por visitarnos!</p>
+            <small class="text-while-50"></small>
         </div>
-      Derechos reservados por <b>WIKIColabora</b>
+      Derechos reservados por <b>&copy;WIKIColabora</b>
     </footer>
 
     
