--- a/WIKIColabora/sobremi.html
+++ b/WIKIColabora/sobremi.html
@@ -35,13 +35,13 @@
     <section class="wikicolabora">
         <img class="w_img" src="" alt="">
 
-        <h3 class="title">¿que es WIKIColabora?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Corporis, dolorem.
-             Illum, repellendus totam dicta nisi
-              animi ad sunt possimus minus eius?
-               Eveniet voluptates tempora placea
-               t temporibus? Voluptas quia est eligendi.
+        <h3 class3="title">¿que es WIKIColabora?</h3>
+        <p>Wiki Colabora es una plataforma digital dinámica para la comunidad informática, donde profesionales, estudiantes y entusiastas de la tecnología <br>
+            comparten conocimientos y recursos. Con una interfaz intuitiva y herramientas de edición colaborativa, fomenta la colaboración y el intercambio  <br>
+             de información en tiempo real. Los usuarios pueden contribuir con contenido sobre programación, ciberseguridad, inteligencia artificial, redes  <br>
+              y más, incluyendo artículos detallados, tutoriales y noticias relevantes. Es un espacio inclusivo que promueve el aprendizaje continuo y el crecimiento  <br>
+               en el campo de la informática.
+
             </p>
     </section>
     <!--fin que es wiki colabora-->
