--- a/WIKIColabora/diferencias.html
+++ b/WIKIColabora/diferencias.html
@@ -14,19 +14,19 @@
     <div class="head">
         <!-- Navegación -->
         <div class="container">
-
             <!-- Logo -->
             <div class="logo">
-                <a href="index.html" class="logo">
-                    <span>wiki</span>colabora</a>
+                <a href="index.html"><span class="wiki">Wiki</span>
+                    <span class="colabora">Colabora</span>
+                </a>
             </div>
+           
 
             <nav class="menu">
+                          <a href="index.html">inicio</a>
                 <a href="#">diferencias</a>
                 <a href="servicios.html">servicios</a>
-                <a href="sobremi.html">sobre Mi</a>
-                <a href="contactos.html">contactos</a>
-                <a href="login.html">cerrar sesion</a>
+                <a href="login.html">iniciar sesion</a>
             </nav>
         </div>
     </div>
@@ -111,43 +111,45 @@
         <div class="texto-home">
             <article class="contener">
                 <h2 class="titulo">Empecemos con html</h2>
-                <p>HTML (HyperText Markup Language) es el lenguaje de marcado estándar utilizado para crear y estructurar contenido en la web. <br>
-                     Proporciona la base para páginas web al definir la estructura y el contenido de la página mediante una serie de elementos y etiquetas.
+                <p>HTML (HyperText Markup Language) es el lenguaje de marcado estándar utilizado para crear y
+                    estructurar contenido en la web. <br>
+                    Proporciona la base para páginas web al definir la estructura y el contenido de la página mediante
+                    una serie de elementos y etiquetas.
                 </p>
-                <a href="#" class="boton">Saber mas</a>
+                <a href="#cuatro" class="boton">Saber mas</a>
             </article>
         </div>
     </section>
 
     <!--SECCION 4-->
-    <section class="contenido cuatro">
+    <section class="contenido cuatro" id="cuatro">
         <title class="titulo">Ejemplos</title>
         <img src="img/dejemplohtml.png" alt="">
+
         
-        <p>mas ejemplos pronto...</p>
     </section>
     <!--fin diferencia con el resto-->
 
     <!--pie de pagina footer-->
     <footer class="contactos">
-        <div class="">
-            <p>numero: 48481548</p>
+        <div class="info">
+            <p>Numero: 48481548</p>
             <p>
-                direccion: <br> Los Maitenes 6060, Estacion Central <br>
-                region metropolitana
+                Direccion: <br> Los Maitenes 6060, Estacion Central <br>
+                Region Metropolitana
             </p>
             <p>
-                telefonos: <br> 9 7575 8585 - 9 8585 7575
-
+                Telefonos: <br> 9 7575 8585 - 9 8585 7575
             </p>
-
             <p>
                 Email: <br> wikicolabora@gmail.com
             </p>
-
             <p>
-                © 2024 wikicolabora - Todos los Derechos Reservados.
+                © 2024 Wikicolabora - Todos los Derechos Reservados.
             </p>
+        </div>
+        <div class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3764.5758729276963!2d-99.1332083846621!3d19.43260768688659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff65f4e68e23%3A0x9b3dce5e65c2c6c!2sZ%C3%B3calo%20de%20la%20Ciudad%20de%20M%C3%A9xico!5e0!3m2!1ses!2smx!4v1620304528072!5m2!1ses!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </footer>
 </body>
